--- a/.github/workflows/opencatalogi-deploy.yml
+++ b/.github/workflows/opencatalogi-deploy.yml
@@ -10,5 +10,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Update publiccode.yaml
+      - name: Deploy Open Catalogi github page
         uses: OpenCatalogi/opencatalogi-action@0.1.0-main.7.b1bab8f
