Shorten logo url

--- a/opencatalogi.yaml
+++ b/opencatalogi.yaml
@@ -2,7 +2,7 @@ contact:
   email: ''
   phone: ''
 description: Een nieuwe beweging
-logo: https://avatars.githubusercontent.com/u/63675863?s=200&v=4
+logo: https://avatars.githubusercontent.com/u/63675863?s=200
 name: Open Webconcept
 publiccodeYmlVersion: '0.2'
 softwareOwned:
